--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "antd": "^5.17.3",
     "autoprefixer": "^10.4.19",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "react": "18",
     "react-dom": "18",
     "react-spinners": "^0.13.8",
